Use include to do proper data injection

--- a/templates/montemplate.j2
+++ b/templates/montemplate.j2
@@ -15,4 +15,4 @@ The answer to this question is  {{forty_two}}
 
 The list defined in other template is : {{ data_module.alist }}
 
-
+{% include 'name_len.j2' %}
